--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ margin: 0;
 box-sizing: border-box;
 }
 body{
-    background-image: url("/images/backgrounds.jpg");
+    background-image: url("https://github.com/dzZaid19/Rock-Paper-Scissors/blob/master/images/backgrounds.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     /* backdrop-filter: opacity (0); */
